# WebCreeper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
agents/: atlas.py
agents/atlas/: README.md  atlas.py
creeper_core/: base_agent.py  base_creeper.py  hooks.py  utils.py
docs/: README.md
docs/agents/: README.md  atlas.md
test/: test_atlas_async.py  test_atlas_callback.py  test_atlas_hooks.py
webcreeper/: __init__.py
webcreeper/agents/atlas/: README.md  atlas.py
webcreeper/creeper_core/: __init__.py  base_agent.py
