[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcreeper"
version = "0.1.0"
description = "Open-source web crawling framework with specialized crawler agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "WebCreeper Contributors" }
]
license = { text = "MIT" }
dependencies = [
  "requests>=2.31,<3",
  "httpx>=0.27,<1",
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
nlp = [
  "accelerate==1.1.1",
  "annotated-types==0.7.0",
  "blis==1.0.1",
  "catalogue==2.0.10",
  "cloudpathlib==0.20.0",
  "confection==0.1.5",
  "cymem==2.0.10",
  "huggingface-hub==0.26.2",
  "joblib==1.4.2",
  "langcodes==3.5.0",
  "language_data==1.3.0",
  "marisa-trie==1.2.1",
  "mpmath==1.3.0",
  "murmurhash==1.0.11",
  "networkx==3.4.2",
  "numpy==2.0.2",
  "packaging==24.2",
  "pillow==11.0.0",
  "preshed==3.0.9",
  "pydantic==2.10.3",
  "pydantic_core==2.27.1",
  "PyYAML==6.0.2",
  "regex==2024.11.6",
  "safetensors==0.4.5",
  "scikit-learn==1.5.2",
  "scipy==1.14.1",
  "sentence-transformers==3.3.1",
  "smart-open==7.0.5",
  "spacy==3.8.2",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "srsly==2.4.8",
  "sympy==1.13.1",
  "thinc==8.3.2",
  "threadpoolctl==3.5.0",
  "tokenizers==0.20.3",
  "torch==2.5.1",
  "tqdm==4.67.0",
  "transformers==4.46.3",
  "typer==0.15.1",
  "typing_extensions==4.12.2",
  "wasabi==1.1.3",
  "weasel==0.4.1",
  "wrapt==1.17.0",
]

[project.urls]
Homepage = "https://github.com/Y-Elsayed/WebCreeper"
Repository = "https://github.com/Y-Elsayed/WebCreeper"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "creeper_core*"]
